force-app/main/default/objects/Application_Fee_LVR_Doc_Type_Fee_Table__mdt/Application_Fee_LVR_Doc_Type_Fee_Table__mdt.object-meta.xml
<CustomObject>
    <label>Application Fee LVR Doc Type Fee Table</label>
    <pluralLabel>Application Fee LVR Doc Type Fee Table</pluralLabel>
</CustomObject>