force-app/main/default/objects/Application_Fee_LVR_Doc_Type_Fee_Table__mdt/fields/Near_Prime_Plus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Near_Prime_Plus_Amount__c</fullName>
    <label>Near Prime Plus Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>