force-app/main/default/objects/Application_Fee_LVR_Doc_Type_Fee_Table__mdt/fields/Prime_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prime_Amount__c</fullName>
    <label>Prime Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>