force-app/main/default/objects/Application_Fee_LVR_Doc_Type_Fee_Table__mdt/fields/Specialist_Amount__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Amount__c</fullName>
    <label>Specialist Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>