force-app/main/default/objects/Application_Fee_LVR_Doc_Type_Fee_Table__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Near_Prime_Amount__c</columns>
    <columns>Near_Prime_Plus_Amount__c</columns>
    <columns>Prime_Amount__c</columns>
    <columns>Specialist_Amount__c</columns>
    <columns>Specialist_Plus_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>